{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "a35c2349-f82a-46eb-9d3d-45f7c8fc9232",
            "actions": [
                {
                    "name": "AbilityZ",
                    "type": "Button",
                    "id": "63bb2267-98a8-4f27-bb2f-eafcfd08d548",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityX",
                    "type": "Value",
                    "id": "58946308-81de-435e-b3c6-f6e3b698e232",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f1cce800-f8d4-428d-afb6-b0d3c89ce04a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7e0294d-6831-4623-b33b-9a94c648e560",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityZ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95472767-d54e-4b8a-995e-3163bab1d2bf",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "ca36fb79-afe2-4e6a-a6ca-f918d9a68616",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "562de3a0-c431-4c52-898c-c31ef47c4bde",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "33bf7526-c51a-404e-b1ce-b87b8c1a6023",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bb486c45-3d6e-4fff-b7f8-cf8d0ad76719",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "69f9130d-75fe-4dbf-9fa7-0ffafa312854",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}